--- a/MyApp.Tests/MyApp.Tests.csproj
+++ b/MyApp.Tests/MyApp.Tests.csproj
@@ -1,14 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <ItemGroup>
-    <ProjectReference Include="..\MyApp\MyApp.csproj" />
+    <ProjectReference Include="..\MyApp\MyApp.csproj"/>
   </ItemGroup>
-
+  <ItemGroup>
+    <PackageReference Include="LibGit2Sharp" Version="*"/>
+  </ItemGroup>
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
 </Project>
