--- a/BlazorWebAssemblyApp/BlazorWebAssemblyApp.csproj
+++ b/BlazorWebAssemblyApp/BlazorWebAssemblyApp.csproj
@@ -8,5 +8,6 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.12"/>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.12" PrivateAssets="all"/>
     <PackageReference Include="Radzen.Blazor" Version="4.4.7"/>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9"/>
   </ItemGroup>
 </Project>
