--- a/BlazorWebAssemblyApp/BlazorWebAssemblyApp.csproj
+++ b/BlazorWebAssemblyApp/BlazorWebAssemblyApp.csproj
@@ -5,9 +5,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.12"/>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.12" PrivateAssets="all"/>
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.8"/>
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.8" PrivateAssets="all"/>
     <PackageReference Include="Radzen.Blazor" Version="4.4.7"/>
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9"/>
+    <PackageReference Include="System.Net.Http.Json" Version="7.0.0"/>
   </ItemGroup>
 </Project>
