--- a/MyWebApi/MyWebApi.csproj
+++ b/MyWebApi/MyWebApi.csproj
@@ -14,5 +14,6 @@
     <PackageReference Include="LibGit2Sharp" Version="*"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.1"/>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2"/>
+    <PackageReference Include="Microsoft.Net.Http.Headers" Version="2.2.8"/>
   </ItemGroup>
 </Project>
